fix: tweak aspect ratio to align to grid

--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -48,7 +48,7 @@
   }
 
   .hero__img {
-    aspect-ratio: 393 / 303;
+    aspect-ratio: 393 / 304;
   }
 }
 
